@@ -1,3 +1,7 @@
+2016-05-18  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSPredicate.m: attempt fix for bug #47619
+
 2016-05-18  Eric Heintzmann <heintzmann.eric@free.fr>
 
 	* ChangeLog.2:
